--- a/templates/mainsite/diacritics.html
+++ b/templates/mainsite/diacritics.html
@@ -162,38 +162,38 @@
                             <tr>
                                 <td>Á, á (acute accent)</td>
                                 <td>Indicates stress on a syllable and changes vowel sound.</td>
-                                <td class="examples">cágado (turtle) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('cágado')">🔊</button>
-                                    <br> avó (grandmother) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('avó')">🔊</button></td>
+                                <td class="examples"><span class="notranslate">cágado</span> (turtle) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('cágado')">🔊</button>
+                                    <br><span class="notranslate">avó</span> (grandmother) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('avó')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ã, ã (tilde)</td>
                                 <td>Indicates nasalization of a vowel.</td>
-                                <td class="examples">mãe (mother) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('mãe')">🔊</button>
-                                    <br> pão (bread) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pão')">🔊</button></td>
+                                <td class="examples"><span class="notranslate">mãe</span> (mother) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('mãe')">🔊</button>
+                                    <br><span class="notranslate">pão</span> (bread) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pão')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ê, ê (circumflex)</td>
                                 <td>Indicates a closed vowel.</td>
-                                <td class="examples">pêssego (peach) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pêssego')">🔊</button>
-                                    <br> você (you) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('você')">🔊</button></td>
+                                <td class="examples"><span class="notranslate">pêssego</span> (peach) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pêssego')">🔊</button>
+                                    <br><span class="notranslate">você</span> (you) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('você')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ç, ç (cedilla)</td>
                                 <td>Indicates a soft 'c' sound before 'a', 'o', 'u'.</td>
-                                <td class="examples">coração (heart) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('coração')">🔊</button>
-                                    <br>ação (action) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('ação')">🔊</button></td>
+                                <td class="examples"><span class="notranslate">coração</span> (heart) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('coração')">🔊</button>
+                                    <br><span class="notranslate">ação</span> (action) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('ação')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ô, ô (circumflex)</td>
                                 <td>Indicates a stressed, closed vowel sound.</td>
-                                <td class="examples">avião (airplane) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('avião')">🔊</button> 
-                                    <br>pôr (to put) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pôr')">🔊</button></td>
+                                <td class="examples"><span class="notranslate"></span>avião (airplane) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('avião')">🔊</button> 
+                                    <br><span class="notranslate">pôr</span> (to put) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pôr')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>À, à (grave accent)</td>
                                 <td>Used to denote stress and also in contractions such as à (to the) combining a preposition and a definite article.</td>
-                                <td class="examples">à noite (at night) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('à noite')">🔊</button> 
-                                    <br>à vontade (at ease) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('à vontade')">🔊</button></td>
+                                <td class="examples"><span class="notranslate"></span>à noite (at night) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('à noite')">🔊</button> 
+                                    <br><span class="notranslate">à vontade</span> (at ease) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('à vontade')">🔊</button></td>
                             </tr>
                         </table></center>
                     </div>
